Fix: 배경화면 적용으로 인한 발도장 z-index 수정

--- a/frontend/styles/Calendar.css
+++ b/frontend/styles/Calendar.css
@@ -36,22 +36,6 @@
   cursor: pointer;
 }
 
-/* navigator */
-.react-calendar__navigation {
-  display: flex;
-  height: 44px;
-  margin-bottom: 1em;
-}
-.react-calendar__navigation button {
-  min-width: 44px;
-  background: none;
-  font-size: 2rem;
-}
-.react-calendar__navigation button:disabled {
-  /* background-color: #f0f0f0; */
-  color: #000000;
-}
-
 /* 요일 */
 abbr[title] {
   text-decoration: none;
@@ -93,6 +77,7 @@ abbr[title] {
   text-align: center;
   line-height: 1.8rem;
   color: #676c76;
+  z-index: 1000;
 }
 
 /* .react-calendar__month-view__days__day--weekend {
@@ -135,7 +120,7 @@ abbr[title] {
   background-size: cover;
   margin: -2rem 0 0 0.3rem;
   opacity: 80%;
-  z-index: -100000;
+  z-index: -10000;
 }
 
 .finance-wrapper {
